--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@
         мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной
         стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</blockquote>
       <p class="intro__list">Часовых поясов 11</p>
-      <p class="intro__list">Объектов природного наследия <span class="intro__list intro__list_up-case">ЮНЕСКО</span> 12</p>
-      <p class="intro__list">Объектов культурного наследия <span class="intro__list intro__list_up-case">ЮНЕСКО</span> 16</p>
+      <p class="intro__list">Объектов природного наследия <span class="intro__list intro__list_up-case">ЮНЕСКО</span> 12
+      </p>
+      <p class="intro__list">Объектов культурного наследия <span class="intro__list intro__list_up-case">ЮНЕСКО</span>
+        16</p>
       <p class="intro__list">Природных заповедников 105</p>
       <p class="intro__list">Аэропортов 241</p>
     </section>
@@ -60,14 +62,17 @@
         <h2 class="places__title">Куршская коса</h2>
         <div class="places__website">
           <p class="places__website places__website places__website_url-heading">url</p>
-          <a class="places__website places__website places__website_link" href="http://park-kosa.ru" target="_blank">park-kosa.ru</a>
+          <a class="places__website places__website places__website_link" href="http://park-kosa.ru"
+            target="_blank">park-kosa.ru</a>
         </div>
         <img src="./images/places/place-kosa.jpg" alt="Куршская коса" class="places__image">
-        <div class="places__paragraph">
-          <p>Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива
+        <div>
+          <p class="places__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта —
+            спокойного Куршского залива
             с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю
             российского анклава. </p>
-          <p>На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству —
+          <p class="places__paragraph">На этом Калининградская область не заканчивается. Для путешественника и
+            исследователя там же по соседству —
             самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов.
             Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.
           </p>
@@ -78,13 +83,16 @@
         <div class="places__website">
           <p class="places__website places__website_url-heading">url</p>
           <a class="places__website places__website_link"
-            href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="_blank">National Geographic</a>
+            href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="_blank">National
+            Geographic</a>
         </div>
         <img src="./images/places/place-kolsky.jpg" alt="Кольский" class="places__image">
-        <div class="places__paragraph">
-          <p>Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — тайга, а на север —
+        <div>
+          <p class="places__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой
+            на юг — тайга, а на север —
             Ледовитый океан, прикидывающийся Баренцевым морем.</p>
-          <p>Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в Териберке. Возможно, слово
+          <p class="places__paragraph">Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в
+            Териберке. Возможно, слово
             «Хибины» не осталось под снегом школьных воспоминаний об уроках географии. Возможно, вы не интересовались
             пронизывающей земную кору сверхглубокой скважиной, а от апатитов вас давно накрывает апатия. Но ваша мечта
             увидеть северное сияние начинает сбываться с билетом
@@ -99,12 +107,13 @@
             href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" target="_blank">Facebook</a>
         </div>
         <img src="./images/places/place-altai.jpg" alt="Алтай" class="places__image">
-        <div class="places__paragraph">
-          <p>Алтай — одно из красивейших мест в России.
+        <div>
+          <p class="places__paragraph">Алтай — одно из красивейших мест в России.
             В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и
             озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным
             воздухом.</p>
-          <p>Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите всё разнообразие местной
+          <p class="places__paragraph">Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите
+            всё разнообразие местной
             флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а на равнинах пасутся косули. И
             знаменитые манулы — тоже обитатели Алтайского края.</p>
         </div>
@@ -113,14 +122,16 @@
         <h2 class="places__title">Зимний Байкал</h2>
         <div class="places__website">
           <p class="places__website places__website_url-heading">url</p>
-          <a class="places__website places__website_link" href="https://vk.com/baikalmile" target="_blank">https://vk.com/baikalmile</a>
+          <a class="places__website places__website_link" href="https://vk.com/baikalmile"
+            target="_blank">https://vk.com/baikalmile</a>
         </div>
         <img src="./images/places/place-winter-baikal.jpg" alt="Зимний Байкал" class="places__image">
-        <div class="places__paragraph">
-          <p>Всем известен Байкал как крупнейшее озеро
+        <div>
+          <p class="places__paragraph">Всем известен Байкал как крупнейшее озеро
             в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.
           </p>
-          <p>Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу. Это такой вид спорта,
+          <p class="places__paragraph">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по
+            скийорингу. Это такой вид спорта,
             когда лыжник привязывает себя
             к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019 года на фестивале
             «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
@@ -130,11 +141,13 @@
         <h2 class="places__title">Карелия</h2>
         <div class="places__website">
           <p class="places__website places__website places__website_url-heading">url</p>
-          <a class="places__website places__website_link" href="http://vodlozero.ru" target="_blank">http://vodlozero.ru/</a>
+          <a class="places__website places__website_link" href="http://vodlozero.ru"
+            target="_blank">http://vodlozero.ru/</a>
         </div>
         <img src="./images/places/place-karelia.jpg" alt="Карелия" class="places__image">
-        <div class="places__paragraph">
-          <p>Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее
+        <div>
+          <p class="places__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская
+            лиственница не растёт западнее
             Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых
             болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому
             существу, видевшему солнце раньше, чем увидал его Иван Грозный.
